--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ display: flex;
 justify-content: center;
 align-items: center;
 min-height: 100vh;
-background: url('login_page2.jpeg')no-repeat;
+background: url('image.jpeg')no-repeat;
 background-size: cover;
 }
 
